WexGit/Wex_DX/force-app/main/default/objects/Test_Data_Configuration__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>The API name of the Object who&apos;s data will be inserted</description>
    <label>Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>