WexGit/Wex_DX/force-app/main/default/objects/Test_Data_Configuration__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Designates the order in which the static resources are loaded into the database.</description>
    <label>Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>