WexGit/Wex_DX/force-app/main/default/objects/Test_Data_Configuration__mdt/fields/Required_Fields_Only__c.field-meta.xml
<CustomField>
    <fullName>Required_Fields_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked this data will be inserted as a blank record  without circular  lookup fields populated</description>
    <label>Required Fields Only</label>
    <type>Checkbox</type>
</CustomField>