WexGit/Wex_DX/force-app/main/default/objects/Test_Data_Configuration__mdt/fields/Static_Resource__c.field-meta.xml
<CustomField>
    <fullName>Static_Resource__c</fullName>
    <description>The name of the Static Resource file where the object&apos;s data should be pulled from</description>
    <label>Static Resource</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>